<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_video">Test Video</string>
    <string name="action_scroll">Test scroll</string>
    <string name="action_tts">Test TTS</string>
    <string name="action_paint">Test Paint</string>

</resources>
