<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_video"
        android:orderInCategory="100"
        android:title="@string/action_video"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scroll"
        android:orderInCategory="100"
        android:title="@string/action_scroll"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tts"
        android:orderInCategory="100"
        android:title="@string/action_tts"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paint"
        android:orderInCategory="100"
        android:title="@string/action_paint"
        app:showAsAction="never" />


</menu>
